--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
-    "mongoose": "^6.8.1"
+    "moment": "^2.29.4",
+    "mongoose": "^6.8.1",
+    "twix": "^1.3.0"
   }
 }
