--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "moment": "^2.29.4",
-    "mongoose": "^6.8.1",
+    "mongoose": "^6.10.5",
+    "request": "^2.88.2",
     "twix": "^1.3.0"
   }
 }
